--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,3 @@
-
-
 <html ng-app="flickr">
 <!--[if lt IE 7]>      <html lang="en" ng-app="myApp" class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html lang="en" ng-app="myApp" class="no-js lt-ie9 lt-ie8"> <![endif]-->
@@ -20,5 +18,6 @@
   <script src="js/lib/angular/angular.min.js"></script>
   <script src="js/lib/angular/angular-ui-router.min.js"></script>
   <script src="js/app.js"></script>
+  <script src="js/modules/form/formCtrl.js"></script>
 </body>
 </html>
