--- a/app/js/modules/form/form.html
+++ b/app/js/modules/form/form.html
@@ -1,1 +1,22 @@
-<div>form container</div>
+<div>
+    <form ng-submit="search()">
+        <label>Seahc flickr</label>
+        <input type="text" ng-model="seachField" />
+
+        <input type="text" ng-model="user" />
+        <button type="submit">Search</button>
+    </form>
+
+    <div ng-if="results">
+        <ul>
+            <li ng-repeat="photo in results.photos.photo">
+                <img src="{{photo.url_q}}" />
+                <div>{{photo.owner}}</div>
+                <div>{{photo.dateupload}}</div>
+                <div>{{photo.datetaken}}</div>
+                <div>{{photo.views}}</div>
+            </li>
+        </ul>
+    </div>
+
+</div>
