--- a/app/js/modules/search/search.html
+++ b/app/js/modules/search/search.html
@@ -7,13 +7,13 @@
 
     <div ng-if="results">
         <div>
-            <button ng-click="sortBy('views')" ng-class="{reverse: reverse}">views</button>
-            <button ng-click="sortBy('datetaken')" ng-class="{reverse: reverse}">date taken</button>
-            <button ng-click="sortBy('dateupload')" ng-class="{reverse: reverse}">date uploaded</button>
-            <button ng-click="sortBy('owner')" ng-class="{reverse: reverse}">owner</button>
+            <button ng-click="sortBy('views')">views</button>
+            <button ng-click="sortBy('datetaken')">date taken</button>
+            <button ng-click="sortBy('dateupload')">date uploaded</button>
+            <button ng-click="sortBy('owner')">owner</button>
         </div>
         <ul>
-            <li ng-repeat="ele in results | orderBy:propertyName:reverse" ng-click="tagDetails($index)">
+            <li ng-repeat="ele in results | orderBy:propertyName:reverse" ng-click="tagDetails(results.indexOf(ele))">
                 <img ng-src="{{ele.url_q}}" />
                 <div>{{ele.owner}}</div>
                 <div>{{ele.dateupload}}</div>
