FEATURE: Finalising sorting feature

--- a/app/js/modules/results/results.html
+++ b/app/js/modules/results/results.html
@@ -1,5 +1,5 @@
 <div>
-
+    <a ui-sref="search">Back to search</a>
     <div ng-if="results">
         <ul>
             <li ng-repeat="ele in results">
