--- a/app/index.html
+++ b/app/index.html
@@ -15,9 +15,14 @@
 <body>
   <div ui-view></div>
 
+  <div class="errorsWrapper" ng-if="currentError">
+    {{currentError}}
+  </div>
+
   <script src="js/lib/angular/angular.min.js"></script>
   <script src="js/lib/angular/angular-ui-router.min.js"></script>
   <script src="js/app.js"></script>
+  <script src="js/modules/services/exceptionHandlerSrvc.js"></script>
   <script src="js/modules/services/flickrSrvc.js"></script>
   <script src="js/modules/search/searchCtrl.js"></script>
   <script src="js/modules/results/resultsCtrl.js"></script>
