--- a/app/js/modules/search/search.html
+++ b/app/js/modules/search/search.html
@@ -1,6 +1,6 @@
 <div>
     <form ng-submit="submit()">
-        <input type="text" ng-model="seachTerm" placeholder="search flickr" />
+        <input type="text" ng-model="seachTerm" placeholder="search flickr" ng-required="required" />
         <input type="text" ng-model="user" placeholder="user ID" />
         <button type="submit" ng-disabled="!seachTerm">search</button>
     </form>
