--- a/app/index.html
+++ b/app/index.html
@@ -17,7 +17,9 @@
   <div ui-view class="container-fluid"></div>
 
 
-  <div class="alert alert-danger" role="alert" ng-if="currentError">{{currentError}}</div>
+  <div class="alert alert-danger" role="alert" ng-if="currentError">
+    <span>{{currentError}}</span>
+  </div>
 
 
   <script src="https://use.fontawesome.com/38cb023b6b.js"></script>
